# plotWave

./: README.md  pyproject.toml
src/: config.py  main.py
src/routes/: routes.py
src/services/: errorHandler.py  processor.py
